src/main/default/objects/aforza__Recurring_Record__c/aforza__Recurring_Record__c.object-meta.xml
<CustomObject>
    <description>An object that controls when a record recurs.</description>
    <label>Recurring Record</label>
    <nameField>
        <label>Recurring Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>