src/main/default/objects/aforza__Recurring_Record__c/fields/aforza__Frequency__c.field-meta.xml
<CustomField>
    <fullName>aforza__Frequency__c</fullName>
    <description>The frequency at which this recurring record should happen.</description>
    <inlineHelpText>The frequency at which this recurring record should happen.</inlineHelpText>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W</fullName>
                <label>Week-ly</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Fortnightly</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 fortnightly cycle</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Month-ly</label>
            </value>
            <value>
                <fullName>Annually</fullName>
                <isActive>false</isActive>
                <label>Annually</label>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
                <isActive>false</isActive>
                <label>Bi-Monthly</label>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
                <isActive>false</isActive>
                <label>Bi-Weekly</label>
            </value>
            <value>
                <fullName>Daily</fullName>
                <isActive>false</isActive>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>