src/main/default/objects/aforza__Recurring_Record__c/fields/aforza__Last_Recurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>aforza__Last_Recurrence_Date__c</fullName>
    <description>The date for the last recurring record to be scheduled on.</description>
    <inlineHelpText>The date for the last recurring record to be scheduled on.</inlineHelpText>
    <label>Last Recurrence Date</label>
    <type>DateTime</type>
</CustomField>