src/main/default/objects/aforza__Recurring_Record__c/fields/aforza__Number_Of_Recurrences__c.field-meta.xml
<CustomField>
    <fullName>aforza__Number_Of_Recurrences__c</fullName>
    <description>The number of recurrences the record should recur.</description>
    <inlineHelpText>The number of recurrences the record should recur.</inlineHelpText>
    <label>Number Of Recurrences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>