src/main/default/objects/aforza__Recurring_Record__c/fields/aforza__Type__c.field-meta.xml
<CustomField>
    <fullName>aforza__Type__c</fullName>
    <description>The type of recurring record.</description>
    <inlineHelpText>The type of recurring record.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>