src/main/default/objects/aforza__Recurring_Record__c/fields/CallDayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>CallDayOfWeek__c</fullName>
    <label>Call Day of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WeekDays</valueSetName>
    </valueSet>
</CustomField>