src/main/default/objects/aforza__Recurring_Record__c/fields/DaysBetweenRecurrence__c.field-meta.xml
<CustomField>
    <fullName>DaysBetweenRecurrence__c</fullName>
    <formula>CASE(
				aforza__Frequency__c,
				&apos;W&apos;, 7, 
				&apos;F&apos;, 14,
				&apos;M&apos;, 28,
				0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days calculated from frequency: W - 7, F - 14, M - 28</inlineHelpText>
    <label>Days Between Recurrence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>