src/main/default/objects/aforza__Recurring_Record__c/fields/PlanAnotherVisit__c.field-meta.xml
<CustomField>
    <fullName>PlanAnotherVisit__c</fullName>
    <formula>IF(ISBLANK(aforza__Last_Recurrence_Date__c), TRUE, aforza__Last_Recurrence_Date__c &lt; (NOW() + (DaysBetweenRecurrence__c * aforza__Number_Of_Recurrences__c)))</formula>
    <inlineHelpText>Will be true when Last Recurrence Date plus Days Between Recurrence is smaller than actual date.</inlineHelpText>
    <label>Plan Another Visit</label>
    <type>Checkbox</type>
</CustomField>