src/main/default/objects/aforza__Recurring_Record__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <inlineHelpText>Date of the first visit planned for this recurrence.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>