src/main/default/objects/aforza__Recurring_Record__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>